--- a/classroom/package.json
+++ b/classroom/package.json
@@ -14,6 +14,7 @@
     "start:prod": "node dist/main"
   },
   "dependencies": {
+    "@apollo/federation": "^0.38.1",
     "@nestjs/apollo": "^10.1.7",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
@@ -24,7 +25,7 @@
     "@prisma/client": "^4.8.0",
     "apollo-server-express": "^3.11.1",
     "express-jwt": "^8.2.1",
-    "graphql": "^16.6.0",
+    "graphql": "15",
     "jwks-rsa": "^3.0.0",
     "kafkajs": "^2.2.3",
     "reflect-metadata": "^0.1.13",
