--- a/front/package.json
+++ b/front/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@auth0/nextjs-auth0": "^2.0.1",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
@@ -16,9 +18,22 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "graphql": "15",
     "next": "13.1.1",
+    "next-http-proxy-middleware": "^1.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "^2.16.2",
+    "@graphql-codegen/import-types-preset": "^2.2.6",
+    "@graphql-codegen/typescript": "^2.8.6",
+    "@graphql-codegen/typescript-operations": "^2.5.11",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "autoprefixer": "^10.4.13",
+    "graphql-codegen-apollo-next-ssr": "^1.7.4",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
