--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@auth0/nextjs-auth0": "^2.0.1",
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "1.0.6",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -23,7 +25,8 @@
     "next-http-proxy-middleware": "^1.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "v8": "^0.1.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.2",
@@ -31,6 +34,8 @@
     "@graphql-codegen/typescript": "^2.8.6",
     "@graphql-codegen/typescript-operations": "^2.5.11",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "graphql-codegen-apollo-next-ssr": "^1.7.4",
     "postcss": "^8.4.20",
